<resources>
    <string name="app_name">ট্রাভেল গাইড</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kutubdia_one">কুতুবদিয়ার চ্যানেল বেশ বড়। সারা বছর বেশ উত্তাল থাকলেও শীতে মোটামুটি শান্তই থাকে। মাগনামা ঘাট থেকে এই চ্যানেল পাড়ি দিয়েই পৌঁছতে হবে দ্বীপে।</string>
    <string name="kutubdia_two">কুতুবদিয়ার সমুদ্র সৈকত উত্তর-দক্ষিণে প্রায় ১৬ কিলোমিটার দীর্ঘ। বেশিরভাগ এলাকাই বেশ নির্জন। পর্যটকের আনাগোনা নেই বললেই চলে। মাঝে মাঝে শুধু আছে জেলেদের কর্মব্যস্ততা। কোথাও কোথাও সৈকতের পাশে আছে ঝাউগাছের সারি। কুতুবদিয়া সৈকতের আরেকটি প্রধান বৈশিষ্ট হল প্রচুর গাংচিল ঘুরে বেড়ায় সেখানে। নির্জনতার সুযোগে সৈকতের কোথাও কোথাও লাল কাঁকড়াদের দল ঘুরে বেড়ায় নির্ভয়ে। সূর্যাস্তের দৃশ্য দেখার জন্য কুতুবদিয়ার সৈকত আদর্শ জায়গা।</string>
    <string name="kutubdia_three">বাংলাদেশের সবচেয়ে বড় বায়ুবিদ্যুৎ কেন্দ্র কুতুবদিয়ায় অবস্থিত। প্রায় এক হাজার কিলোওয়াট ক্ষমতা সম্পন্ন এই বিদ্যুৎকেন্দ্র গড়ে তোলা হয়েছে সৈকতের দক্ষিণ প্রান্তে, আলী আকবরের ডেল এলাকায়। দেখতে ভুল করবেন না দেশের বড় এই বায়ুবিদ্যুৎ কেন্দ্র।</string>
    <string name="kutubdia_four">কুতুদিয়া যেতে হবে কক্সবাজারের বাসে। ঢাকা থেকে সরসরি কক্সবাজার যায় সোহাগ পরিবহন, টি আর ট্রাভেলস, গ্রীন লাইন পরিবহন, হানিফ এন্টারপ্রাইজ, সেন্টমার্টিন পরিবহন, সৌদিয়া পরিবহনের এসি বাস।

ভাড়া ১ হাজার ৭শ’ থেকে ২ হাজার ৫শ’ টাকা। এছাড়া এস আলম, সৌদিয়া, শ্যামলী, ইউনিক, ঈগল ইত্যাদি পরিবহনের নন এসি বাসে ভাড়া সাড়ে ৬শ’ থেকে ৮শ’ টাকা।

এসব বাসে চড়ে নামতে হবে চট্টগ্রাম কক্সবাজারের পথে যাত্রা বিরতি স্থল ইনানী রিসোর্টের এক কিলোমিটার সামনে বড়ইতলি মোড়ে। সেখান থেকে সিএনজি চালিত বেবিটেক্সিতে যেতে হবে মাগনামা ঘাট। জনপ্রতি ভাড়া ৩৫ টাকা। রিজার্ভ নিলে ২শ’ টাকা। মাগনামা ঘাট থেকে কুতুবদিয়া চ্যানেল পার হতে হবে ইঞ্জিন নৌকা অথবা স্পিড বোটে।

ইঞ্জিন নৌকায় সময় লাগে ২০ থেকে ২৫ মিনিট, ভাড়া ১৫ থেকে ২০ টাকা। আর স্পিডবোটে লাগে ১০ মিনিট, ভাড়া ৬০ টাকা। চ্যানেল পার হলেই কুতুবদিয়া।

বড়ঘোপ বাজার রিকশায় যেতে লাগবে ২৫ থেকে ৩০ টাকা। এছাড়া চট্টগ্রামের তৃতীয় কর্ণফুলী সেতুর পূর্ব প্রান্ত থেকে ও কক্সবাজার বাসস্টান্ড থেকে সরাসরি এস আলমের বাস যায় মাগনামা ঘাটে। ভাড়া চট্টগ্রাম থেকে ১৬০ টাকা, কক্সবাজার থেকে ৯০ টাকা।  </string>
    <string name="kutubdia_five">কুতুবদিয়া দ্বীপে পর্যটকদের থাকার জন্য মানসম্মত একমাত্র আবাসন ব্যবস্থা হল হোটেল সমুদ্র বিলাস। সমুদ্র লাগোয়া এই হোটেলে বসে উপভোগ করা যায় সমুদ্রের সৌন্দর্য। হোটেলের দুই জনের নন এসি কক্ষ ভাড়া ৮শ’ টাকা তিনজনের ১ হাজার এবং চার জনের কক্ষ ভাড়া ১ হাজার ২শ’ টাকা। যোগাযোগ: হোটেল সমুদ্র বিলাস, বড়ঘোপ বাজার, কুতুবদিয়া। মোবাইল ০১৮১৯৬৪৭৩৫৫, ০১৭২২০৮৬৮৪৭।</string>
    <string name="kutubdia_six">কুতুবদিয়া দ্বীপে বিদ্যুৎ সংযোগ নেই। জেনারেটর ও সৌর বিদ্যুৎ দিয়ে এখানকার বৈদ্যুতিক চাহিদা মেটানো হয়ে থাকে।

সৈকতে জোয়ার ভাটা চিহ্নিত করার কোনো ব্যবস্থা নেই। তাই নিজ দায়িত্বে জোয়ার-ভাটার সময় জেনে সমুদ্র স্নানে নামতে। ভাটার সময় সমুদ্রে নামা বিপজ্জনক।</string>
    <string name="sagek_one"> সাম্প্রতিক সময়ে ভ্রমণ পিপাসু মানুষদের কাছে যে কয়টি ভ্রমণ গন্তব্য সবচেয়ে জনপ্রিয় হয়ে উঠেছে তার মধ্যে অন্যতম হল রাঙামাটি জেলায় অবস্থিত সাজেক ভ্যালী। তাই আমরা আপনাদের ভ্রমণের সুবিধার্থে নিয়ে এলাম সাজেক ভ্রমণের বিস্তারিত পোস্ট।

প্রকৃতির অপার সৌন্দর্য্যের এক অনন্য আঁধার আমাদের মাতৃভূমি রূপসী বাংলা । আমরা বিভিন্ন দেশের গ্রীন ভ্যালী দেখতে যাই বা দেখার স্বপ্ন দেখি। কিন্তু আমাদের দেশেও আছে তেমনই এক অপরূপা গ্রীন ভ্যালী, যার নাম সাজেক। ঢাকা থেকে মাত্র ৭/৮ ঘণ্টা দূরত্বে পার্বত্য অঞ্চলের রাঙামাটি জেলার সাজেক ভ্যালী অবস্থান। হাতে দুই দিন সময় নিয়ে বেড়িয়ে পড়ুন এ সৌন্দর্য অবলোকন করার জন্য, যা আপনার কল্পনায় গেঁথে থাকবে অনেক অনেক দিন।

সাজেক রাঙামাটি জেলার বাঘাইছড়ি উপজেলায় অবস্থিত । সাজেক হলো বাংলাদেশের সবচেয়ে বড় ইউনিয়ন । যার আয়তন ৭০২ বর্গমাইল । সাজেকের উত্তরে ভারতের ত্রিপুরা , দক্ষিনে রাঙামাটির লংগদু , পূর্বে ভারতের মিজোরাম , পশ্চিমে খাগড়াছড়ির দীঘিনালা । সাজেক রাঙামাটি জেলায় অবস্থিত হলেও এর যাতায়াত সুবিধা খাগড়াছড়ির দীঘিনালা থেকে । রাঙামাটি থেকে নৌপথে কাপ্তাই হয়ে এসে অনেক পথ হেঁটে সাজেক আসা যায় । খাগড়াছড়ি জেলা সদর থেকে এর দূরত্ব ৭০ কিলোমিটার । আর দীঘিনালা থেকে ৪৯ কিলোমিটার । বাঘাইহাট থেকে ৩৪ কিলোমিটার </string>
    <string name="sagek_how">সাজেকের অবস্থান রাঙ্গামাটি পার্বত্য জেলায় হলে খাগড়াছড়ি শহর থেকেই সেখানে যাওয়া সবচেয়ে সুবিধাজনক। তাই সাজেক যেতে চাইলে প্রথমেই আপনাকে চলে যেতে হবে খাগড়াছড়ি শহরে। ঢাকা থেকে খাগড়াছড়ি রুটে শ্যামালী, হানিফ, এস আলম, সৌদিয়া ও শান্তি পরিবহনের বাস চলাচল করে। গাবতলী, কলাবাগানসহ ঢাকা শহরের বিভিন্ন প্রান্তে রয়েছে পরিবহণগুলোর কাউন্টার। ঢাকা থেকে বাস ছেড়ে চট্রগ্রাম রোড হয়ে কুমিল্লা, ফেনী পার হয়ে চট্রগ্রামের মিরেসরাই হয়ে খাগড়াছড়ি শহরে পৌছায়। এতে সময় লাগে ৮ ঘণ্টার মত। </string>
   <string name="sagek_how_two">আপনাকে খাগড়াছড়ি থেকে সাজেকে যেতে হবে খোলা জীপে করে। যা চান্দের গাড়ি নামেই পরিচিত। দুই দিনের জন্য ভাড়া করলে আপনাকে গুনতে হবে ৭০০০-৯০০০ টাকা। চান্দের গাড়িতে আসন সংখ্যা ১২টি। সাজেক থেকে প্রথমে আপনাকে যেতে হবে দীঘিনালায়। দীঘিনালা নেমে আধা ঘন্টার জন্য ঘুরে আসতে পারেন হাজাছড়া ঝর্ণা থেকে। সাথে সেরে নিতে পারেন গোসলটাও। কারণ সাজেকে পানির বড্ড অভাব। তবে চিন্তার কিছু নেই গোসল ও অন্যান্য কাজের জন্য দরকারি পানি প্রতিদিন ট্রাকে করে পৌঁছে যায় সাজেকে।

তবে পানি ব্যবহারে সাজেকে আপনাকে মিতব্যয়ী হতে হবে। খাগড়াছড়ি থেকে দীঘিনালার দূরত্ব ২৩ কিলোমিটার। দীঘিনালায় একটি সেনানিবাস রয়েছে। এরপর বাকি রাস্তাটুকু আপনাকে যেতে হবে সামরিক বাহিনীর এসকোর্টে। সাম্প্রতিক সময়ে পাহাড়ে কিছু অপ্রীতিকর ঘটনা ঘটায় নিরাপত্তার স্বার্থে সেনাবাহিনী এই পদক্ষেপ নিয়েছে। দীঘিনালা থেকে সেনাবাহিনীর এসকোর্ট শুরু হয় সকাল ১০ টা থেকে ১১টার মধ্যে। তাই ঐ সময়ের আগেই আপনাকে পৌঁছে যেতে হবে খাগড়াছড়ি থেকে দীঘিনালায়। নইলে একবার সকালের এসকোর্ট মিস করলে আবার এসকোর্টে পেতে অপেক্ষা করতে হবে বিকেল অবধি।

দীঘিনালা থেকে প্রথমে যেতে বাগাইহাট, তারপর মাচালং হাট হয়ে সরাসরি পৌঁছে যাবেন সাজেকে। খাগড়াছড়ি শহর থেকে সাজেক যেতে মোট সময় লাগবে প্রায় আড়াই ঘন্টার মত। আঁকাবাঁকা পাহাড়ি রাস্তাধরে চলা এই ছোট জার্নিটি সাজেক ট্যুরের অন্যতম আকর্ষণ। চারদিকে শুধু পাহাড় আর হরিতের সমারোহ আপনাকে ভুলিয়ে দেবে পথের ক্লান্তি।</string>
    <string name="sagek_home"> খাগড়াছড়িতে পর্যটন মোটেল সহ বিভিন্ন মানের থাকার হোটেল আছে । দীঘিনালায় কয়েকটি হোটেল থাকলেও দীঘিনালা গেস্ট হাউজের মান কিছুটা ভালো ।

ক) খাগড়াছড়িঃ পর্যটন মোটেলঃ এটি শহরে ঢুকতেই চেঙ্গী নদী পার হলেই পরবে । মোটেলের সব কক্ষই ২ বিছানার । ভাড়াঃ এসি ২১০০ টাকা, নন এসি ১৩০০ টাকা । এসি স্যুইট রুম ৩,১০০ টাকা। মোটেলের অভ্যন্তরে মাটিতে বাংলাদেশের মানচিত্র বানানো আছে । তবে পুরো খাগড়াছড়ি জেলায় বৈদ্যুতিক গোলযোগের কারণে ভোল্টেজ ওঠানামা করায় এসি রুমগুলো নন-এসি হিসেবে ভাড়া দেয়া হচ্ছে। যোগাযোগঃ ০৩৭১-৬২০৮৪৮৫ ।হোটেল ইকো ছড়ি ইনঃ খাগড়াপুর ক্যান্টর্মেন্ট এর পাশে পাহাড়ী পরিবেশে অবস্থিত । এটি রিসোর্ট টাইপের হোটেল । যোগাযোগঃ ০৩৭১-৬২৬২৫ , ৩৭৪৩২২৫ ।হোটেল শৈল সুবর্নঃ ০৩৭১-৬১৪৩৬ , ০১১৯০৭৭৬৮১২ ।হোটেল জেরিনঃ ০৩৭১-৬১০৭১ ।হোটেল লবিয়তঃ ০৩৭১-৬১২২০ , ০১৫৫৬৫৭৫৭৪৬ , ০১১৯৯২৪৪৭৩০ ।হোটেল শিল্পীঃ ০৩৭১-৬১৭৯৫ । দীঘিনালা গেস্ট হাউজঃ এটি দীঘিনালা শহরের বাস স্ট্যান্ডের উল্টো পাশে অবস্থিত । এটি দীঘিনালার আবাসিক হোটেল গুলোর মধ্যে একটু মানসম্মত । এখানে ৩০০ থেকে ৫০০ টাকার মধ্যে রুম নিয়ে থাকা যাবে । নূর মোহাম্মদ(ম্যানেজার) - ০১৮২৭৪৬৮৩৭৭।</string>
    <string name="sagek_bilas">সাজেক পৌঁছে খাওয়া দাওয়া করার পর দীর্ঘ যাত্রার শেষে আপনাকে একটু বিশ্রাম নিতেই হবে। এছাড়া সাজেকের কাঠফাটা দুপুরের রোদে না ঘোরাঘুরি করে রোদ পড়ার অপেক্ষা করাই ভাল। বিকেলে জীপে করে আপনি ঘুরে আসতে পারেন সাজেক ভ্যালির আরও ভেতরে। সেখানে একটু উঁচু টিলায় উঠলেই উপভোগ করতে পারবেন সূর্যাস্ত। সাজেকের সন্ধ্যা নামে অপরূপ এক সৌন্দর্য নিয়ে। দেখবেন মেঘমুক্ত নীলাকাশ একটু একটু করে অন্ধকারে আচ্ছন্ন হয়ে যাচ্ছে আর মিটিমিটি করে জ্বলে উঠছে একটি দুটি করে তারা। দেখবেন অল্পকিছুক্ষণের মধ্যে একটি দুটি থেকে সহস্র তারা আপনার চোখের সামনে জ্বলজ্বল করে উঠবে। হয়ত আপনি এরকম তারা ভরা আকাশ জীবনে কখনও দেখেন নি।

সন্ধ্যার তারাভরা আকাশ দেখতে দেখতে মৃদুমন্দ হাওয়ায় চায়ের কাপে চুমুক দিলে আপনার হৃদয়ে যে অনুভূতি আসবে সেটাই হতে পারে আপনার সাজেক ভ্রমণের সবচেয়ে বড় আনন্দ। যারা তারা দেখতে ভালবাসেন তাদের জন্য সাজেক খুবই আদর্শ একটি জায়গা। এমনকি যারা এখনও মিল্কিওয়ে বা আকাশগঙ্গা ছায়াপথ দেখেননি তারাও সাজেক ভ্যালিতে এসে জীবনে প্রথমবারের মত দেখা পেতে পারেন মহাবিশ্বে আমাদের আশ্রয়স্থল আকাশগঙ্গার।</string>
    <string name="sagek_bilas_two">রাতে চাইলে বারবিকিউ পার্টি করতে পারেন। সাথে চলবে জমপেশ আড্ডা। তবে এত আনন্দের মাঝে মশার ব্যাপারে সতর্ক থাকতে ভুলবেন না। পার্বত্য এলাকায় মশা একটি বড় সমস্যা। একটু অসতর্ক হলে আক্রান্ত হতে পারেন ম্যালেরিয়ায়। ভোরে সূর্যোদয় দেখতে চাইলে হ্যালিপ্যাডে চলে যাবেন অবশ্যই। সেজন্য উঠতে হবে খুব ভোরে আর চলে যেতে হবে এক বা দুই নম্বর হ্যালিপ্যাডে। সাজেকে সূর্যোদয়ের সময় সোনালি আভা সাদা মেঘের উপর যখন ঠিকরে পড়ে তখন আসাধারণ এক দৃশ্যের অবতারণা হয়।</string>
    <string name="alutila">খাগড়াছড়ি শহরে এসে আলুটিলা রহস্য গুহায় যেতে অবশ্যই যেন ভুলবেন না। শহরের অদূরে আবস্থিত এই গুহায় বিচিত্র এক অভিজ্ঞতা হবে আপনার মাত্র মিনিট পনেরর একটি ভ্রমণে। যেন মনে হবে ইন্ডিয়ানা জোন্সের মত আপনিও অংশ নিচ্ছেন কোন রোমাঞ্চকর অভিযানে। গুহার ভেতর ঘুটঘুটে অন্ধকার। তাই টর্চ বা বাঁশের মশাল সাথে নিয়ে যেতে হবে। চিন্তা করবেন না গুহার বাইরেই মশাল কিনতে পাওয়া যায়।</string>
    <string name="alutila_two">আলুটিলা যাওয়ার পথেই চান্দের গাড়ির চালককে বললে সে ঘুরিয়ে আনবে কাছের টিলার উপর থেকে। পুরো খাগড়াছড়ি শহরের ভিউ এখান থেকে পাওয়া যায়। খাগড়াছড়ি শহরে একটি ছোট্ট ঝুলন্ত সেতু আছে। চাইলে দেখে আসতে পারেন সেটিও আর সারাদিনের ক্লান্তির অবসান ঘটাতে সাঁতরে আসতে পারেন নিচের খাল থেকে। রাতেই ধরতে পারেন ঢাকাগামী বাস। কথা দিচ্ছি দুইদিনের এই সাজেক ট্যুর আপানর মন্দ কাটবেনা।</string>
    <string name="sagek_info">অপরূপ রূপে শোভিত আমাদের মাতৃভূমি বাংলাদেশ। একদিকে বিস্তীর্ণ সমতল অন্যদিকে সাগর ও পাহাড়। কি নেই আমাদের দেশে? এইদেশের প্রতিটি জেলাই যেন এক একটি পর্যটন কেন্দ্র। তাই ভ্রমণ পিয়াসি মানুষের আনাগোনাও দিন দিন বেড়ে চলছে এইসব পর্যটন কেন্দ্রগুলোতে। তবে দুঃখজনক ব্যাপার হল পর্যটকদের অসতর্কতা এবং বে খেয়ালীপনায় অনেক জায়গাতে নষ্ট হচ্ছে প্রাকৃতিক পরিবেশ। তাই যেকোন ভ্রমণে চিপসের প্যাকেট, জুসের ক্যানসহ নানা ময়লা আবর্জনা যথাযথ জায়গা ফেলার দিকে আমাদের সচেতন হওয়া উচিত নয়তো আগামী প্রজন্ম বঞ্চিত হবে এই মনোরম প্রাকৃতিক সৌন্দর্য থেকে।</string>
    <string name="golapgram_des">শহুরে যান্ত্রিক জীবন থেকে একটু বিশ্রামের জন্য বা শারীরিক ক্লান্তি অথবা মানসিক অবসাদ দূর করার জন্য আমরা অনেক জায়গাতেই তো ঘুরতে যাই। তবে সবসময় দূরে কোথাও ঘুরতে যেতে যেমন সময় লাগে তেমনি খরচও হয় বেশি। খরচের থেকেও সময় ম্যানেজ করাটাই হয়ে উঠে প্রধান প্রতিবন্ধকতা। তাই কম সময়ে কাছে কোথাও ঘুরে আসতে পারবেন এমন অনেক জায়গাই আছে ঢাকার আশে পাশে। তারমধ্যে খুব সুন্দর আর মন ভালো করে দেয়ার মতো একটি জায়গা হলো গোলাপ গ্রাম যা ঢাকার অদূরে সাভারের বিরুলিয়া ইউনিয়নে অবস্থিত। ঢাকার খুব কাছেই সাভারের তুরাগ নদীর তীরে সাদুল্লাপুরের অবস্থান। বিশ্বাস রাখতে পারেন, এই গ্রাম আপনার যান্ত্রিক জীবনের অনেকটা ক্লান্তিই দূর করে দিবে।</string>
    <string name="golap_howgo_one"> পথ ১: যাত্রাবাড়ী, গুলিস্তান, ফার্মগেট হয়ে মিরপুর বেড়িবাঁধে যাওয়ার বাস সার্ভিস আছে। এ ছাড়া মিরপুর এক নম্বর সেকশন অথবা মিরপুর-১০ কিংবা গাবতলি থেকে রিকশায় সহজেই যাওয়া যায় দিয়া বাড়ি বটতলা ঘাট। এখান থেকে শ্যালো ইঞ্জিনের নৌকা ১০ মিনিট পরপর ছেড়ে যায় সাদুল্লাহপুরের দিকে। স্পিড বোট, কোষা নৌকা, শ্যালও নৌকা চুক্তিতে ভাড়া নিয়েও যাওয়া যায় সাদুল্লাহপুর। সে ক্ষেত্রে শুধু যেতে কোষা নৌকার ভাড়া ৩০০ টাকা, শ্যালও নৌকা ২৫০ টাকা, স্পিড বোট ৫০০ টাকা।</string>
    <string name="golap_go_two">পথ ২: টঙ্গি ষ্টেশন থেকে কামারপাড়া হয়ে সি এন জি রিজার্ভ নিয়ে যেতে হবে বিরুলিয়া ব্রিজ। ভাড়া ২০০ টাকা। এখান থেকে অটোতে সরাসরি সাদুল্লাহপুর। ভাড়া ২০ টাকা।</string>
    <string name="golap_go_three">পথ ৩: উত্তরা হাউজ বিল্ডিং, নর্থ টাওয়ার বা মাসকট প্লাজা থেকে সোনারগাঁ জনপথ ধরে লেগুনাতে দিয়া বাড়ি, তারপর একটু হেটে মেইন রোড, লোকাল গাড়িতে উঠে বিরুলিয়া ব্রিজ। হেঁটেও যেতে পারবেন। বিরুলিয়া ব্রিজ থেকে বাকি পথ আগের মতোই।</string>
    <string name="golap_food">সাদুল্লাহপুর ঘাটের কাছে হোটেল আছে। সেখানে হালকা নাস্তা থেকে শুরু করে দুপুরের খাবার খেতে পারবেন।</string>
</resources>