<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF1E392E"
    tools:context="com.mirmahfuz.travelguide.Kutubdia">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="7dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/kutubdia"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="কুতুবদিয়া চ্যানেল"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_one"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="সমুদ্র সৈকত"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_two"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/kutubdia_two"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="বায়ু বিদ্যুৎ কেন্দ্র"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_three"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="কীভাবে যাবেন"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_four"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="কোথায় থাকবেন"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_five"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="প্রয়োজনীয় তথ্য"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutubdia_six"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>