<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF1E392E"
    tools:context="com.mirmahfuz.travelguide.Golapgram">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="7dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/golap_main"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="গোলাপ গ্রাম"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/golapgram_des"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/golap"
                android:scaleType="fitXY"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text=" কীভাবে যাবেন"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>



            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text=" পথ ১:"
            android:textColor="@color/text_color_2"
            android:textAppearance="?android:textAppearanceLarge"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/golap_howgo_one"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text=" পথ ২:"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/golap_go_two"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text=" পথ ৩:"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/golap_go_three"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/golap_two"
                android:scaleType="fitXY"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="খাওয়া-দাওয়া"
                android:textColor="@color/text_color_2"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/golap_food"
                android:textColor="@color/text_color_1"
                android:textAppearance="?android:textAppearanceMedium"/>








        </LinearLayout>
    </ScrollView>

</RelativeLayout>